--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,13 @@
 .DS_Store
 .maxcrc
-bin/php*
-config/.isolated-storage/
-config/configstore/
-config/direnv
-config/git/gitk
-config/mycli/history
-config/nvim
-config/pgcli/history
-config/pgcli/log
-config/ranger/bookmarks
-config/ranger/history
-config/google-chrome/
-config/thefuck/
-config/dconf/
-config/nautilus/
-ipython/profile_default/db
-ipython/profile_default/history.sqlite
-vifm/vifminfo
-vifm/vimfiles
+config/*
 vim/.backup/*
 vim/.netrwhist
 vim/.spell/custom.en.utf-8.add.spl
 vim/.temp/*
 vim/.tmp/*
 vim/.undo/*
-vim/bundle/*
+vim/pack/*
 vim/init.vim
 vim/sessions/*
 vim/undo/*
-vim/vim
-vim/vundle_plugins/custom
-
