feat(Bash) add hh hstr

--- a/.envrc
+++ b/.envrc
@@ -37,7 +37,7 @@ export DIRENV_LOADED=True                                        #
 #  "make deps" will install what we need in there                #
 # eg: awscli/ansible                                             #
 PATH_add .venv/bin                                               #
-export VIRTUAL_ENV=dotfiles                                         #
+export VIRTUAL_ENV=home                                      #
 #                                                                #
 #   Hashicorp logging                                            #
 #  (handy)                                                       #
@@ -53,4 +53,5 @@ export PYTHONUNBUFFERED=1                                        #
 ##################################################################
 
 export ROOTDIR="$(pwd)"
-export GOPATH="$(pwd)"
+export GOPATH=$HOME/workspace/go
+export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
